--- a/data/articles/password-best-practice.mdx
+++ b/data/articles/password-best-practice.mdx
@@ -1,6 +1,7 @@
 ---
 title: サイバーセキュリティの基本：パスワードのベストプラクティス
 date: 2023-12-12
+summary: この記事では、強力なパスワードの作成方法、パスワードマネージャーの活用、二要素認証の重要性など、パスワードに関するベストプラクティスを解説します。
 ---
 
 パスワードはオンラインアカウントのセキュリティにおいて重要な要素です。しかし、弱いパスワードの使用や再利用はセキュリティリスクを高めます。この記事では、強力なパスワードの作成方法、パスワードマネージャーの活用、二要素認証の重要性など、パスワードに関するベストプラクティスを解説します。
