--- a/data/articles/responsive-web.mdx
+++ b/data/articles/responsive-web.mdx
@@ -1,6 +1,7 @@
 ---
 title: レスポンシブWebデザインの基本原則
 date: 2023-12-10
+summary: この記事では、レスポンシブデザインの基本原則について説明し、メディアクエリやフレキシブルレイアウトなどのテクニックを紹介します。
 ---
 
 レスポンシブWebデザインは、モバイルデバイスからデスクトップコンピュータまで、さまざまな画面サイズと解像度に対応するための重要なテクニックです。この記事では、レスポンシブデザインの基本原則について説明し、メディアクエリやフレキシブルレイアウトなどのテクニックを紹介します。
