--- a/data/articles/frontend-development.mdx
+++ b/data/articles/frontend-development.mdx
@@ -14,7 +14,7 @@ tags: ['HTML', 'CSS', 'JavaScript']
 - **HTML（HyperText Markup Language）**は、ウェブページの構造を定義するために使用されます。
 - 基本的な構造要素:
   ```html
-  <!DOCTYPE html>
+  <!doctype html>
   <html>
     <head>
       <title>ページタイトル</title>
@@ -30,6 +30,7 @@ tags: ['HTML', 'CSS', 'JavaScript']
 
 - **CSS（Cascading Style Sheets）**は、ウェブページのデザインとレイアウトを制御します。
 - 基本的なスタイルの例:
+
   ```css
   body {
     font-family: Arial, sans-serif;
@@ -45,7 +46,7 @@ tags: ['HTML', 'CSS', 'JavaScript']
 - **JavaScript**は、ウェブページに動的要素やインタラクティビティを追加するために使用されます。
 - 簡単なスクリプト例:
   ```javascript
-  document.getElementById("demo").innerHTML = "こんにちは、JavaScript!";
+  document.getElementById('demo').innerHTML = 'こんにちは、JavaScript!';
   ```
 
 ## リソース
