mdx内のタグ設定の記法を変更

--- a/data/articles/frontend-development.mdx
+++ b/data/articles/frontend-development.mdx
@@ -2,7 +2,10 @@
 title: フロントエンド開発入門
 date: 2023-12-16
 summary: フロントエンド開発は、ウェブサイトやアプリケーションのユーザーインターフェイスを作成するプロセスです。この記事では、HTML、CSS、およびJavaScriptの基本に焦点を当てます。
-tags: ['HTML', 'CSS', 'JavaScript']
+tags:
+  - HTML
+  - CSS
+  - JavaScript
 ---
 
 ## 概要
