--- a/data/articles/javascript-frameworks.mdx
+++ b/data/articles/javascript-frameworks.mdx
@@ -2,7 +2,9 @@
 title: JavaScriptフレームワークの紹介
 date: 2023-12-15
 summary: JavaScriptフレームワークは、効率的で堅牢なウェブアプリケーション開発を支援します。この記事では、React、Vue、Angularのような人気のあるフレームワークについて紹介します。
-tags: ['JavaScript', 'React']
+tags:
+  - JavaScript
+  - React
 ---
 
 ## 概要
