--- a/data/articles/responsive-web.mdx
+++ b/data/articles/responsive-web.mdx
@@ -2,7 +2,10 @@
 title: レスポンシブWebデザインの基本原則
 date: 2023-12-10
 summary: この記事では、レスポンシブデザインの基本原則について説明し、メディアクエリやフレキシブルレイアウトなどのテクニックを紹介します。
-tags: ['デザイン', 'CSS', 'HTML']
+tags:
+  - デザイン
+  - CSS
+  - HTML
 ---
 
 ## 概要
