remark,rehypeの各種プラグイン追加

--- a/data/articles/frontend-development.mdx
+++ b/data/articles/frontend-development.mdx
@@ -16,7 +16,7 @@ tags:
 
 - **HTML（HyperText Markup Language）**は、ウェブページの構造を定義するために使用されます。
 - 基本的な構造要素:
-  ```html
+  ```html:index.html
   <!doctype html>
   <html>
     <head>
