更新 11ty-url-setting.mdx
書き間違いを修正

--- a/data/articles/11ty-url-setting.mdx
+++ b/data/articles/11ty-url-setting.mdx
@@ -10,7 +10,7 @@ tags:
 
 eleventy はデフォルトの挙動として `/hoge/fuga.njk` のようなソースファイルを `/hoge/fuga/index.html` のように `[ファイル名]/index.html` の形で出力します。
 
-これを元ファイルと同じ構造の `/site/hoge/fuga.html` として出力するにはどうしたら良いかまとめておきます。
+これを元ファイルと同じ構造の `/hoge/fuga.html` として出力するにはどうしたら良いかまとめておきます。
 
 ## 結論
 
